fix grid overflow

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  margin: 0;
+  background-color: red;
 }
 
 *, *:before, *:after {
@@ -20,6 +22,7 @@ html {
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -35,23 +38,25 @@ img {
 
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background-color: black;
 }
 
 .container {
   width:100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 6fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 6fr);
+  grid-template-rows: minmax(0, 1fr);
   background-color: var(--color-secondary);
   color: black;
+  margin: 0;
 }
 
 
 .header_main {
   display: grid;
-  grid-template-rows: 0.5fr 3.9fr;  
+  grid-template-rows: minmax(0, 1fr) minmax(0, 5fr);  
   align-items: stretch;
 }
 
@@ -150,7 +155,9 @@ body {
 
 .main {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: minmax(0, 3fr) minmax(0, 1fr);
+  grid-template-rows: minmax(0, 1fr) ;
+  background-color: grey;
 }
 
 .main_column_projects > h2 {
@@ -160,14 +167,14 @@ body {
 
 .main_column_projects {
   display: grid;
-  grid-template-rows: 0.1fr 1fr;
+  grid-template-rows: minmax(0, 0.1fr) minmax(0, 1fr);
 }
 
 .project_list {
   margin: 1.7rem 1.5rem 3rem 1.5rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   gap: 1.5rem;
 }
 
@@ -182,19 +189,19 @@ body {
 
 .main_column_announcements_trending {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
   margin-right: 2rem;
 }
 
 .announcements {
   display: grid;
-  grid-template-rows: 0.1fr 1fr;
+  grid-template-rows: minmax(0, 0.1fr) minmax(0, 1fr);
 }
 
 .announcements_content {
   background-color: var(--color-four);
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   border-radius: 1rem;
   margin-top: 1rem;
 }
@@ -207,14 +214,14 @@ body {
 
 .trending {
   display: grid;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: minmax(0, 1fr) minmax(0, 5fr);
   margin-bottom: 6rem;
   margin-top: 2rem;
 }
 
 .trending_content {
   display: grid;
-  grid-template-rows: repeat(4,1fr);
+  grid-template-rows: repeat(4,minmax(0, 1fr));
   background-color: var(--color-four);
   border-radius: 1rem;
 }
@@ -227,7 +234,7 @@ body {
   grid-row: 1/5;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.1fr 1fr 0.5fr 1fr;
+  grid-template-rows: minmax(0, 0.1fr) minmax(0, 1fr) minmax(0, 0.5fr) minmax(0, 1fr);
   justify-content: start;
   gap: 1rem;
   justify-items: start;
